Added basic logo to the extension

--- a/development/vscode_support/pipe-language-support/package.json
+++ b/development/vscode_support/pipe-language-support/package.json
@@ -2,6 +2,10 @@
     "name": "pipe-language-support",
     "displayName": "Pipe language support",
     "description": "Basic support for the pipe programming language",
+    "icon": "./logo.png",
+    "repository": {
+        "url": "https://github.com/Ulfasaar/pipe"
+    },
     "version": "0.0.1",
     "publisher": "rjweyers",
     "engines": {
